--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["adoo <Adoo@outlook.com>"]
 edition = "2018"
 
 [dependencies]
-rxrust = "0.7.2"
+rxrust = {path="../rx_rs", version="*"}
 herald_derive = {path="./herald_derive", version="*"}
 
 
